# homepage

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dev/: create-virtualenv  format  initialize-db  initialize-env  sync-dependencies
fmoney/: fmoney.xml
homepage/: settings.py  urls.py
homepage/core/: apps.py  models.py  views.py
homepage/core/migrations/: 0001_initial.py
homepage/static/: robots.txt
homepage/static/css/: base.css  dark.css  light.css  main.css
homepage/templates/: 404.html  about.html  base.html  contact.html  contact_failure.html  contact_success.html  email.html  fmoney.html  home.html  links.html  projects.html  work.html
requirements/: base.in  base.txt  dev.in  dev.txt  prod.txt
requirements/in/: dev.in
server-config/: nginx.conf  run-wsgi-server-homepage  wsgi-server-homepage.service
services/: run-wsgi-server  wsgi-service-homepage.service
